--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
    ========================================================================== */
 
 html {
-    color: #222;
+    color: #FF69B4;
     font-size: 1em;
     line-height: 1.4;
 }
@@ -96,37 +96,77 @@ textarea {
    ========================================================================== */
 
 html {
-  background-color: #fff;
+  background-color: #FF69B4;
   height: 100%;
   width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 0 2em;
+  padding: 2em;
   font-size: 1.25em;
   height: 100%;
   color: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 header,
 footer {
-  background-color: #222;
-  height: 80px;
+  background-color: #FF69B4;
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: left;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 50px;
 }
 
 main {
-  background-color: #ccc;
+  background-color: #FF69B4;
   height: 250px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 2px solid white
 }
+
+main p {
+    font-size: 1.35em;
+  }
+
+footer {
+    border-top: 2px solid white
+}
+
+.div-1, .div-2, .div-3 {
+    /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
+    color: #fff;
+    line-height: 1.5em;
+    font-size: 1.25em;
+    color: white;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%
+}
+
+.wrapper {
+    /*add display:flex and set justify-content to space-between*/
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .div-1, .div-2 {
+    border-right: 1px solid #555;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 
 header,
 footer,
@@ -140,6 +180,7 @@ main {
     align-items: center;
     flex-flow: row wrap;
     justify-content: space-between;
+    max-width: 1200px;
 
 }
 
@@ -236,14 +277,21 @@ main {
    ========================================================================== */
 
 /* If you'd like to try a different layout on Desktop and larger screens: */
-@media (min-width: 1200px) {
-  #div-1,
-  #div-2{
-      /* set your flex value to 1 50% */
-  }
+
+media all and (min-width: 1200px) {
+    .div-1, .div-2, .div-3 {
+      flex-basis: 30%;
+    }
+
+    .div-1, .div-2 {
+      border-right: 1px solid #555;
+      padding-right: 30px;
+    }
+}
 
   #div-3 {
     /* set your flex value to 1 100% */
+    flex: 1 100%
   }
 }
 
